<resources>
    <string name="app_name">毅都</string>

    <string name="not_network">当前无任何可用网络，请链接网络后重试！</string>
    <string name="server_exception">服务器异常！</string>
    <string name="json_error">服务器返回数据格式有误！</string>
    <string name="picture_source">图片来源</string>
    <string name="photo_graph">拍照</string>
    <string name="album">相册</string>

    <!--登录-->
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>

    <!--首页-->
    <string name="please_input_search_context">请输入检索条件！</string>
    <string name="please_input_voyage">请输入航名航次或目的港！</string>
    <string name="please_input_voyage_order">请输入航名航次或提单号！</string>
    <string name="bill_of_lading_num">提单号：</string>
    <string name="clearance_status">通关状态</string>
    <string name="inspection">查验</string>
    <string name="box_status">箱状态</string>
    <string name="down_arrow">↓</string>
    <string name="container_no">集装箱号：</string>
    <string name="view_the_process">查看流程</string>
    <string name="old_password">原始密码</string>
    <string name="new_password">新密码</string>
    <string name="query_password">确认新密码</string>
    <string name="query_update">确认修改</string>
    <!--预约-->
    <string name="all">全部</string>
    <string name="all_select">全选</string>
    <string name="submit">提交</string>
    <string name="submit_add">提交并继续添加</string>
    <string name="bill_of_lading_no">提单号</string>
    <string name="input_bill_of_lading_num">请输入提单号！</string>
    <string name="containerNo">集装箱号</string>
    <string name="input_container_no">请输入集装箱号！</string>
    <string name="expected_date_of_suitcase">预计提箱日期</string>
    <string name="input_expected_date_of_suitcase">请选择预计提箱日期！</string>
    <string name="suitcase_car_no">提箱车号：</string>
    <string name="input_suitcase_car_no">请输入提箱车号！</string>
    <string name="product_name">品名</string>
    <string name="input_product_name">请输入品名！</string>
    <string name="box_no">箱号</string>
    <string name="box_no_1">箱号：</string>
    <string name="input_box_no">请输入箱号！</string>
    <string name="specifications">规格</string>
    <string name="input_specifications">请输入规格！</string>
    <string name="number">件数</string>
    <string name="input_number">请输入件数！</string>
    <string name="weight">件重</string>
    <string name="input_weight">请输入件重！</string>
    <string name="inspection_commission">查验委托</string>
    <string name="input_inspection_commission">请选择查验委托！</string>
    <string name="inspection_no">报验号</string>
    <string name="input_inspection_no">请输入报验号！</string>
    <string name="inspection_time">查验时间</string>
    <string name="input_inspection_time">请选择查验时间！</string>
    <string name="car_no">车号</string>
    <string name="input_car_no">请输入车号！</string>
    <string name="is_need_car_matching">是否需要配车</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="primary_box_no">原箱号</string>
    <string name="input_primary_box_no">请输入原箱号！</string>
    <string name="target_box_no">目标箱号</string>
    <string name="input_target_box_no">请输入目标箱号</string>
    <string name="target_car_no">目标车号</string>
    <string name="input_target_car_no">请输入目标车号</string>
    <string name="color_no">色号</string>
    <string name="input_color_no">请输入色号</string>
    <string name="fumigating_time">熏蒸时间</string>
    <string name="input_fumigating_time">请选择熏蒸时间！</string>
    <string name="ship_company">船公司</string>
    <string name="input_ship_company">请输入船公司！</string>
    <string name="case_requirements">验箱要求</string>
    <string name="input_case_requirements">请输入验箱要求！</string>
    <string name="fleet">车队</string>
    <string name="input_fleet">请输入车队！</string>
    <string name="total_weight">总重</string>
    <string name="input_total_weight">请输入总重！</string>
    <string name="destination">目的地</string>
    <string name="input_destination">请输入目的地！</string>
    <string name="distribution_time">配送时间</string>
    <string name="input_distribution_time">请选择配送时间！</string>
    <string name="distribution_requirement">配送要求</string>
    <string name="input_distribution_requirement">请输入配送要求！</string>
    <string name="reset">重置</string>
    <string name="query">查询</string>
    <string name="confirm">确认</string>
    <string name="no_data">暂无数据，请输入提单号查询。</string>
    <string name="no_data1">暂无数据，请选择检索条件查询。</string>
    <string name="entrust_station">委托场站：</string>
    <string name="please_select">请选择！</string>
    <string name="port_of_dredging">疏港目的：</string>
    <string name="cancel">取消</string>
    <string name="prosecutor">查验方：</string>
    <string name="search_context">检索条件</string>
    <string name="import_and_export_logo">进出口标识：</string>
    <string name="inspect_type">检查类型：</string>
    <string name="whole_box">整箱</string>
    <string name="spell_box">拼箱</string>
    <string name="return_box_date">返箱日期：</string>
    <string name="input_return_box_date">请选择返箱日期</string>
    <!--订单-->
    <string name="collection">收藏</string>
    <string name="next">下一步</string>
    <string name="last_step">上一步</string>
    <string name="reservation">预约</string>
    <string name="evaluate_more">评价及更多</string>
    <!--个人中心-->
    <string name="my_stock">我的库存</string>
    <string name="my_bill">我的账单</string>
    <string name="up_date_password">更改密码</string>
    <string name="up_date_head">修改头像</string>
    <string name="complaints_and_feedback">投诉反馈</string>
    <string name="logout">注销登录</string>
    <string name="question_type">问题类型</string>
    <string name="please_input_question_type">请选择问题类型！</string>
    <string name="people_of_complaint">投诉对象</string>
    <string name="input_people_of_complaint">请输入投诉对象！</string>
    <string name="cause_of_complaint">投诉原因</string>
    <string name="input_cause_of_complaint">请输入投诉原因！</string>
    <string name="problem_description">请仔细描述您的问题！</string>

</resources>