<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/actionBar"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        app:layout_heightPercent="8%" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llEntrustingTheHarbour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/primary_box_no"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtPrimaryBoxNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_primary_box_no"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/target_car_no"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtTargetCarNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_target_car_no"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/target_box_no"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtTargetBoxNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_target_box_no"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/bill_of_lading_no"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtBillOfLadingNum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_bill_of_lading_num"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/product_name"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtProductName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_product_name"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/specifications"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtSpecifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_specifications"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/number"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_number"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/sixty_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/weight"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <EditText
                        android:id="@+id/edtWeight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="left|center"
                        android:hint="@string/input_weight"
                        android:paddingLeft="@dimen/ten_dp"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/one_hundred_dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/is_need_car_matching"
                        android:textColor="@color/dark_b"
                        android:textSize="@dimen/fourteen_sp" />

                    <RadioGroup
                        android:id="@+id/rgIsNeedCar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rBtnYes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/yes"
                            android:textColor="@color/dark_b"
                            android:textSize="@dimen/fourteen_sp" />

                        <RadioButton
                            android:id="@+id/rBtnNo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/no"
                            android:textColor="@color/dark_b"
                            android:textSize="@dimen/fourteen_sp" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@color/refreshLayout_bg" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_margin="@dimen/ten_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp" />

        <Button
            android:id="@+id/btnSubmitAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:text="@string/submit_add"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>
